# IFCFlux

./: .npmrc  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
public/: extractor.worker.js  stream.worker.js
public/shaders/: BLURR_MASK.fragment.fx  MASK.fragment.fx  MASK.vertex.fx  OUTLINE.fragment.fx
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BabylonViewer.vue  Dialog.vue  DragBar.vue  ProgressBar.vue
src/components/check/: InspectionDialog.vue  InspectionReport.vue  circleProgress.vue
src/components/menu/: Ribbon.vue  Sidebar.vue  TitleBar.vue
src/components/view/: PropertyTable.vue  StructureTree.vue  cubeView.vue
src/composables/: useAppCore.ts  useDragResize.ts  useLayoutManager.ts  useRibbonEvent.ts
src/services/: file-history.ts  model-export.ts  model-manager.ts  model-property.ts  scene-cube.ts  scene-effect.ts  scene-event.ts  scene-history.ts  scene-manager.ts
src/store/: index.ts  scene-store.ts  settings.ts
src/styles/: app.less  index.less  layout.less  variables.less
src/styles/base/: font.less  icon.less  reset.less
src/styles/components/: cube.less  ribbon.less  sidebar.less
src/utils/: config.ts  default.config.ts  index.ts  themeColors.ts
src/utils/analysis/: explosion.ts  measure.ts
src/utils/ifc/: IfcParser.ts  IfcParserToDb.ts  ifcCategoryMap.ts  ifcElementsMap.ts  ifcGeometryTypes.ts  ifcGuidConverter.ts  (+4 more)
(+14 files in other folders)
